Removed POST method for gene_detail endpoint; updated SmartAPI spec YAML; minor fixes to gene_list endpoint
