# hs-ontology-api-spec.yaml
@@ -340,18 +340,48 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/SabCodeTerm'
-  /genes:
-    post:
-      operationId: genes_post
-      summary: Return detailed information on genes specified by HGNC identifiers.
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/GeneDetailRequest"
-            example:
-              ids: [60,MMRN1,FANCS]
+  /gene_list:
+    get:
+      operationId: gene_list_get
+      summary: Return high-level information on a set of genes specified by pagination parameters.
+      parameters:
+        - name: page
+          in: query
+          required: false
+          description: Offset set of genes of count=genesperpage. Can be a non-negative number or the words "first" or "last".
+          schema:
+            type: string
+            default: 1
+          example: 1
+        - name: genesperpage
+          in: query
+          required: false
+          description: Number of genes per "page" to return. Can be a non-negative number.
+          schema:
+            type: string
+            default: 10
+      responses:
+        '200':
+          description: high-level information on genes specified by HGNC identifiers.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/GeneListResponse'
+
+  /gene_detail:
+    get:
+      operationId: gene_detail_get
+      summary: Return detailed information on a gene specified by a HGNC identifier.
+      parameters:
+        - name: id
+          in: query
+          required: true
+          description: HGNC identifier. An identifier can be an approved ID (e.g., 7178); approved symbol (e.g., MMRN1); alias (e.g., EMILIN4 for MMRN1); previous symbol (e.g., MMRN for MMRN1); previous alias; or a name string (approved, previous, alias--e.g., "multimerin 1").
+          schema:
+            type: string
+            example: MMRN1
       responses:
         '200':
           description: detailed information on genes specified by HGNC identifiers.
@@ -532,16 +562,40 @@ components:
             - sennet
             - HuBMAP
             - SenNet
-    GeneDetailRequest: # JAS Sept 2023
+    GeneListResponse:
       type: object
-      description: Request body for genes POST request
+      description: High-level information on a set of genes requested by the gene_list endpoint.
       properties:
-        ids:
+        genes:
           type: array
-          description: HGNC identifiers for genes. An identifier can be an approved ID (e.g., 7178); approved symbol (e.g., MMRN1); alias (e.g., EMILIN4 for MMRN1); previous symbol (e.g., MMRN for MMRN1); previous alias; or a name string (approved, previous, alias--e.g., "multimerin 1").
+          description: gene information
           items:
-            type: string
-          example: [60,MMRN1,FANCS]
+            type: object
+            properties:
+              approved_name:
+                type: string
+                description: HGNC approved name
+                example: multimerin 1
+              approved_symbol:
+                type: string
+                description: HGNC approved symbol
+                example: MMRN1
+              summary:
+                type: string
+                description: RefSeq summary for the gene
+                example: Multimerin is a massive, soluble protein found in....
+        genes_per_page:
+          type: number
+          description: value of genesperpage paramater from the gene_list endpoint
+          example: 3
+        page:
+          type: number
+          description: value of page paramater from the gene_list_endpoint
+          example: 1
+        total_pages:
+          type: number
+          description: total number of "pages" based on the values of genesperpage and the total number of genes
+          example: 14381
     GeneDetailResponse: # JAS Sept 2023
       type: object
       description: Detailed information on a gene.
@@ -602,6 +656,12 @@ components:
                       type: string
                       description: Name (preferred term) for organ in source
                       example: heart
+              sources:
+                type: array
+                description: Array of identifiers of sources for the association of the cell type to the gene
+                items:
+                  type: string
+                  example: Human Reference Atlas
         hgnc_id:
           type: number
           description: numeric HGNC ID for the gene
